[project]
name = "tantivy-indexer"
version = "0.1.0"
description = "A code search engine using Tantivy"
authors = []
dependencies = [
    "tantivy>=0.22.0",
    "loguru>=0.7.0",
    "pygments>=2.15.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tantivy_index"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120
target-version = ["py38"]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.0.290",
    "pytest>=7.0.0",
] 